[gd_scene load_steps=12 format=3 uid="uid://ctk4hr66ohlwa"]

[ext_resource type="Script" path="res://scenes/player/totem/shoot.gd" id="1_3n5sh"]
[ext_resource type="Texture2D" uid="uid://bhmwdl0mr0jwf" path="res://sprites/player/totem/wood spike/destroyed/1.png" id="1_4dcrc"]
[ext_resource type="Texture2D" uid="uid://8t1jn2b1un7g" path="res://sprites/player/totem/wood spike/idle/1.png" id="2_apc1p"]
[ext_resource type="AudioStream" uid="uid://c65vojv7fitem" path="res://sounds/shoot.ogg" id="3_f16jh"]
[ext_resource type="Texture2D" uid="uid://bk1pw6aam3d7r" path="res://sprites/player/totem/wood spike/destroyed/2.png" id="4_x55n7"]
[ext_resource type="Texture2D" uid="uid://b42cll3ed6c16" path="res://sprites/player/totem/wood spike/destroyed/3.png" id="5_h5887"]
[ext_resource type="AudioStream" uid="uid://do6pgdg307asg" path="res://sounds/explosion.ogg" id="6_3cwww"]

[sub_resource type="Animation" id="Animation_j6s5f"]
resource_name = "destroy"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("1_4dcrc"), ExtResource("4_x55n7"), ExtResource("5_h5887")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_3cwww")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_3f21x"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_apc1p")]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_f16jh")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b6ifs"]
_data = {
"destroy": SubResource("Animation_j6s5f"),
"idle": SubResource("Animation_3f21x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3ld3"]
size = Vector2(10, 6)

[node name="Shoot" type="Area2D"]
scale = Vector2(-1, 1)
script = ExtResource("1_3n5sh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4dcrc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b6ifs")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w3ld3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.449992, 0.260462)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
